--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,18 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: "Checking out the code"
         uses: actions/checkout@master
@@ -27,8 +21,15 @@ jobs:
       - name: "Clone monologue"
         uses: actions/checkout@master
         with:
-          repository: countgizmo/monologue
-          path: ./monologue
+            repository: countgizmo/monologue
+            path: ./monologue
+      - name: "Build the site"
+        uses: DeLaGuardo/setup-clojure@master
+        with:
+            cli: latest
+        run: |
+            cd ./monologue
+            clj -m monologue.core generate -t ../countgizmo.github.io/thoughts -s ../countgizmo.github.io/docs
       - name: "Looking for something"
         run: ls -lsh
 
