--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: "Checking out the code"
         uses: actions/checkout@master
         with:
-            path: ./data
+            path: ./countgizmo.github.io
       - name: "Clone monologue"
         uses: actions/checkout@master
         with:
@@ -30,9 +30,11 @@ jobs:
       - name: "Generate the monologue site"
         run: |
             cd ./monologue
-            clojure -m monologue.core generate -t ../data/countgizmo.github.io/thoughts -s ../data/countgizmo.github.io/docs
+            clojure -m monologue.core generate -t ../countgizmo.github.io/thoughts -s ../countgizmo.github.io/docs
       - name: "Looking around"
         run: |
-            cd ./data
-            ls -lsh
+            cd ./countgizmo.github.io
             git status
+            git add .
+            git commit -m "[CI] Generate site"
+            git push
