--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
       - name: "Looking around"
         run: |
             cd ./countgizmo.github.io
+            git config user.email "count.gizmo@gmail.com"
+            git config user.name "countgizmo"
             git status
             git add .
             git commit -m "[CI] Generate site"
